{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 127,
  "lineage": "9ba9d331-24f6-95c9-aa3f-60552f3d15a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf98afff66c4f35",
            "arn": "arn:aws:ec2:us-east-1:488675216463:elastic-ip/eipalloc-05bf98afff66c4f35",
            "association_id": "eipassoc-05938de0230aad361",
            "domain": "vpc",
            "id": "eipalloc-05bf98afff66c4f35",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c89ecb5f399e89f",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-34-233-70-164.compute-1.amazonaws.com",
            "public_ip": "34.233.70.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-eip-1",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-eip-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066f0647dc4d8befd",
            "arn": "arn:aws:ec2:us-east-1:488675216463:elastic-ip/eipalloc-066f0647dc4d8befd",
            "association_id": "eipassoc-0552d52a3942f6223",
            "domain": "vpc",
            "id": "eipalloc-066f0647dc4d8befd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c126970e0174aea",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-98-87-95-4.compute-1.amazonaws.com",
            "public_ip": "98.87.95.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-eip-2",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-eip-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:internet-gateway/igw-0ff3126a5c10d852c",
            "id": "igw-0ff3126a5c10d852c",
            "owner_id": "488675216463",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-igw",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-igw",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:loadbalancer/app/dental-prod-alb/5949b1a56d8e9cd8",
            "arn_suffix": "app/dental-prod-alb/5949b1a56d8e9cd8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dental-prod-alb-230896070.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:488675216463:loadbalancer/app/dental-prod-alb/5949b1a56d8e9cd8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dental-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c73b0ebfa0f8180"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032b67803b53c760a"
              },
              {
                "subnet_id": "subnet-0cf108ad65fa45f1e"
              }
            ],
            "subnets": [
              "subnet-032b67803b53c760a",
              "subnet-0cf108ad65fa45f1e"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-alb",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-alb",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:listener/app/dental-prod-alb/5949b1a56d8e9cd8/ad88cf550a45da02",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-gateway-tg/cdea4ad2cccad3af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:488675216463:listener/app/dental-prod-alb/5949b1a56d8e9cd8/ad88cf550a45da02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:loadbalancer/app/dental-prod-alb/5949b1a56d8e9cd8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.gateway",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ai_agents_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-ai-agents-tg/3f08a6fac184659f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:listener-rule/app/dental-prod-alb/5949b1a56d8e9cd8/ad88cf550a45da02/d028e62d7b6e4bee",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/agents/*",
                      "/ai/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:488675216463:listener-rule/app/dental-prod-alb/5949b1a56d8e9cd8/ad88cf550a45da02/d028e62d7b6e4bee",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:listener/app/dental-prod-alb/5949b1a56d8e9cd8/ad88cf550a45da02",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http_dev",
            "aws_lb_target_group.ai_agents",
            "aws_lb_target_group.gateway",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ai_agents",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-ai-agents-tg/3f08a6fac184659f",
            "arn_suffix": "targetgroup/dental-prod-ai-agents-tg/3f08a6fac184659f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-ai-agents-tg/3f08a6fac184659f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:488675216463:loadbalancer/app/dental-prod-alb/5949b1a56d8e9cd8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dental-prod-ai-agents-tg",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-ai-agents-tg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-ai-agents-tg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-gateway-tg/cdea4ad2cccad3af",
            "arn_suffix": "targetgroup/dental-prod-gateway-tg/cdea4ad2cccad3af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:488675216463:targetgroup/dental-prod-gateway-tg/cdea4ad2cccad3af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:488675216463:loadbalancer/app/dental-prod-alb/5949b1a56d8e9cd8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dental-prod-gateway-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-gateway-tg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-gateway-tg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf98afff66c4f35",
            "association_id": "eipassoc-05938de0230aad361",
            "connectivity_type": "public",
            "id": "nat-0edea5fca41063484",
            "network_interface_id": "eni-05c89ecb5f399e89f",
            "private_ip": "10.0.0.238",
            "public_ip": "34.233.70.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-032b67803b53c760a",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-1",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066f0647dc4d8befd",
            "association_id": "eipassoc-0552d52a3942f6223",
            "connectivity_type": "public",
            "id": "nat-01c928e7c78da405f",
            "network_interface_id": "eni-02c126970e0174aea",
            "private_ip": "10.0.1.64",
            "public_ip": "98.87.95.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf108ad65fa45f1e",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-2",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-nat-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:route-table/rtb-0081ffd618ecdb379",
            "id": "rtb-0081ffd618ecdb379",
            "owner_id": "488675216463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-rt",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-rt",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:route-table/rtb-04984e338c7b33ebb",
            "id": "rtb-04984e338c7b33ebb",
            "owner_id": "488675216463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0edea5fca41063484",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-rt-1",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-rt-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:route-table/rtb-05eedd2faebdf5323",
            "id": "rtb-05eedd2faebdf5323",
            "owner_id": "488675216463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c928e7c78da405f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-rt-2",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-rt-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:route-table/rtb-0ecb4afbb1d65b60e",
            "id": "rtb-0ecb4afbb1d65b60e",
            "owner_id": "488675216463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff3126a5c10d852c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-rt",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-rt",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed6c8a087c68f79",
            "route_table_id": "rtb-0081ffd618ecdb379",
            "subnet_id": "subnet-01845b0b64af784f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd8ab3a8cbe0123",
            "route_table_id": "rtb-0081ffd618ecdb379",
            "subnet_id": "subnet-05f23c9449ad7c11e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6fb162978fe36be",
            "route_table_id": "rtb-04984e338c7b33ebb",
            "subnet_id": "subnet-0a43c0902bc7f09eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043cc0b2bd12ec433",
            "route_table_id": "rtb-05eedd2faebdf5323",
            "subnet_id": "subnet-03981f48ddb7cef8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168cbf447aeff2f3",
            "route_table_id": "rtb-0ecb4afbb1d65b60e",
            "subnet_id": "subnet-032b67803b53c760a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06104edd7259a8cee",
            "route_table_id": "rtb-0ecb4afbb1d65b60e",
            "subnet_id": "subnet-0cf108ad65fa45f1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:security-group/sg-00c73b0ebfa0f8180",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c73b0ebfa0f8180",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dental-prod-alb-20250927070846553900000013",
            "name_prefix": "dental-prod-alb-",
            "owner_id": "488675216463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-alb-sg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-alb-sg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:security-group/sg-0ef6a623b68a7a124",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef6a623b68a7a124",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c73b0ebfa0f8180"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "dental-prod-ecs-20250927070849304600000015",
            "name_prefix": "dental-prod-ecs-",
            "owner_id": "488675216463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-ecs-sg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-ecs-sg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:security-group/sg-0b2581b17e3dd065b",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-0b2581b17e3dd065b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef6a623b68a7a124"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dental-prod-rds-20250927070851700900000017",
            "name_prefix": "dental-prod-rds-",
            "owner_id": "488675216463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-rds-sg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-rds-sg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:security-group/sg-0d98f2a2a6a9d4b41",
            "description": "Security group for ElastiCache Redis",
            "egress": [],
            "id": "sg-0d98f2a2a6a9d4b41",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef6a623b68a7a124"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dental-prod-redis-20250927070851700100000016",
            "name_prefix": "dental-prod-redis-",
            "owner_id": "488675216463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-redis-sg",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-redis-sg",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-01845b0b64af784f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01845b0b64af784f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-1",
              "Project": "dental-clinic-ai",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "database"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-05f23c9449ad7c11e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f23c9449ad7c11e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-2",
              "Project": "dental-clinic-ai",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-database-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "database"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-0a43c0902bc7f09eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a43c0902bc7f09eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-1",
              "Project": "dental-clinic-ai",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "private"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-03981f48ddb7cef8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03981f48ddb7cef8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-2",
              "Project": "dental-clinic-ai",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-private-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "private"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-032b67803b53c760a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032b67803b53c760a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-1",
              "Project": "dental-clinic-ai",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-1",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "public"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:subnet/subnet-0cf108ad65fa45f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf108ad65fa45f1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "488675216463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-2",
              "Project": "dental-clinic-ai",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-public-2",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai",
              "Type": "public"
            },
            "vpc_id": "vpc-04fb294eb77c6b88f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:488675216463:vpc/vpc-04fb294eb77c6b88f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e84918e2696393c",
            "default_route_table_id": "rtb-0e8ea873dbf6fb346",
            "default_security_group_id": "sg-03c036663f8ebeb00",
            "dhcp_options_id": "dopt-061a2ee93de5fbf22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fb294eb77c6b88f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8ea873dbf6fb346",
            "owner_id": "488675216463",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-vpc",
              "Project": "dental-clinic-ai"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "dental-prod-vpc",
              "Owner": "dental-clinic-team",
              "Project": "dental-clinic-ai"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}